# suitesparse_catkin

./: CMakeLists.txt  README.md  package.xml
cmake/: suitesparse-extras.cmake.in
